syntax = "proto3";

package IT.WebServices.Fragments.Content.Stats;

import "google/api/annotations.proto";
import "Protos/IT/WebServices/Fragments/Content/ContentError.proto";

service StatsProgressInterface {
  rpc LogProgressContent (LogProgressContentRequest) returns (LogProgressContentResponse)
  {
    option (google.api.http) = {
      post: "/api/stats/{ContentID}/progress"
      body: "*"
    };
  }
}
  
message LogProgressContentRequest {
  string ContentID = 1;
  float Progress = 2;
}
  
message LogProgressContentResponse {
  ContentError Error = 1;
}

message ProgressContentEvent {
  string UserID = 1;
  string ContentID = 2;
  float Progress = 3;
}
